--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.0.0-beta.42",
     "@babel/preset-env": "^7.0.0-beta.42",
     "@babel/preset-react": "^7.0.0-beta.42",
+    "@material-ui/core": "^3.3.2",
     "babel-loader": "8.0.0-beta.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
