--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,7 @@
   "plugins": [
     "transform-class-properties",
     "react-hot-loader/babel",
-    "transform-object-rest-spread"
+    "transform-object-rest-spread",
+    "@babel/plugin-proposal-object-rest-spread"
   ]
 }
