--- a/package.json
+++ b/package.json
@@ -19,12 +19,18 @@
   "homepage": "https://github.com/HNagamatsu/react_init#readme",
   "dependencies": {
     "@babel/core": "^7.0.0-beta.42",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "^7.0.0-beta.42",
     "@babel/preset-react": "^7.0.0-beta.42",
     "@material-ui/core": "^3.3.2",
+    "@material-ui/icons": "^3.0.1",
+    "axios": "^0.18.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "8.0.0-beta.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-saga": "^0.16.2",
     "webpack": "^4.2.0",
     "webpack-cli": "3.1.1",
     "webpack-dev-server": "^3.1.1"
@@ -34,6 +40,12 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
+    "eslint": "^5.8.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "html-webpack-plugin": "^3.1.0",
     "npm-run-all": "^4.1.2",
     "opener": "^1.4.3",
