--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --hot --mode development --open"
+    "start": "cross-env NODE_ENV=development run-p serve webpack",
+    "serve": "json-server --watch api.json --routes routes.json",
+    "webpack": "webpack-dev-server --hot --mode development --open"
   },
   "repository": {
     "type": "git",
@@ -27,15 +29,20 @@
     "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "8.0.0-beta.0",
+    "cross-env": "^5.2.0",
+    "escape-html": "^1.0.3",
+    "json-server": "^0.14.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "redux-actions": "^2.6.4",
     "redux-devtools-extension": "^2.13.5",
     "redux-saga": "^0.16.2",
-    "webpack": "^4.2.0",
-    "webpack-cli": "3.1.1",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.1"
   },
   "devDependencies": {
+    "@webpack-cli/init": "^0.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "clean-webpack-plugin": "^0.1.19",
