--- a/package.json
+++ b/package.json
@@ -32,6 +32,11 @@
     "cross-env": "^5.2.0",
     "escape-html": "^1.0.3",
     "json-server": "^0.14.0",
+    "postcss": "^7.0.6",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.4.0",
+    "postcss-url": "^8.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "redux-actions": "^2.6.4",
